[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://InfoBars.gd" type="Script" id=2]
[ext_resource path="res://art/arrow2.png" type="Texture" id=3]
[ext_resource path="res://SwingBar.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="InfoBars" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StrokeCounter" type="Label" parent="."]
margin_left = 32.0
margin_top = 312.0
margin_right = 72.0
margin_bottom = 351.0
custom_fonts/font = SubResource( 1 )
text = "Shot 0"

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -79.5
margin_right = 79.5
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Go ahead"

[node name="Wind" type="Label" parent="."]
margin_left = 32.0
margin_top = 160.0
margin_right = 153.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 3 )
text = "Wind
10 m/s"

[node name="WindArrow" type="Sprite" parent="Wind"]
position = Vector2( 32, 104 )
texture = ExtResource( 3 )

[node name="HoleInfo" type="Label" parent="."]
margin_left = 32.0
margin_right = 140.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
text = "Hole 1
Par 4
320 m"

[node name="Score" type="Label" parent="."]
margin_left = 32.0
margin_top = 360.0
margin_right = 161.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 1 )
text = "Score 0"

[node name="SwingBar" parent="." instance=ExtResource( 4 )]

[connection signal="hit" from="SwingBar" to="." method="_on_SwingBar_hit"]
[connection signal="swingStart" from="SwingBar" to="." method="_on_SwingBar_swingStart"]
